# School_21_Language_C

./: README.md
C2_String/: CMakeLists.txt
C2_String/code-samples/: s21_strlen.c
C2_String/src/: m2.c  s21_sscanf.gcda  test.out
C2_String/src/s21_string_funcs/headers/: s21_sscanf.h  s21_string.h
C2_String/src/test_cases/: case_ s21_sscanf_c.c  case_s21_sscanf_i.c  case_s21_sscanf_p.c  case_s21_sscanf_x.c
C2_s21_stringplus-1/: CMakeLists.txt  maintest
C2_s21_stringplus-1/src/: Makefile  a.out  debug  m2.c  maintest  maintest.c  s21_memchr.gcda  s21_memchr.gcno  s21_memcmp.gcda  s21_memcmp.gcno  s21_memmove.gcda  s21_memmove.gcno  s21_sscanf.gcda  s21_sscanf.gcno  s21_strcat.gcda  s21_strcat.gcno  s21_strchr.gcda  s21_strchr.gcno  s21_string.h  s21_string_tests.c  s21_string_tests.h  s21_strlen.gcda  s21_strlen.gcno  s21_strpbrk.gcda  s21_strpbrk.gcno  s21_strspn.gcda  s21_strspn.gcno  test.out
C3_BashUtils/: README_RUS.md
C3_SimpleBashUtils-0-develop/: CMakeLists.txt
C3_SimpleBashUtils-0-master/: CMakeLists.txt
C4_Math/src/: Makefile  s21_math.h  s21_math_tests.c  s21_math_tests.h
C4_s21_math-0/: CMakeLists.txt
C4_s21_math-0/src/: Makefile  coverage_report.functions.html  coverage_report.html  coverage_report.s21_abs.c.0d712a2655a7dec3cacb37cb66ad2810.html  coverage_report.s21_acos.c.4fb098ce40de77561137cdea5b0face3.html  coverage_report.s21_asin.c.bcba769c61086c27db1a8bf300900431.html  coverage_report.s21_atan.c.82fb2a95b0872da048777b10836ee826.html  coverage_report.s21_ceil.c.67c2954732fd3eb94f5a85ca8bddc3ab.html  main.c  s21_abs.gcda  (+51 more)
(+177 files in other folders)
